--- a/emonpixel/antiClockwise.html
+++ b/emonpixel/antiClockwise.html
@@ -32,6 +32,6 @@
 </script>
 
 <script type="text/x-red" data-help-name="emonpixel-anticlockwise">
-    <p>if a single nubmer is passed in then this is turned into a message for display on the emonpixel. This should be bwteen 0 and 16</p>
+    <p>if a single number is passed in then this is turned into a message for display on the emonpixel. Number should be between 0 and 16</p>
     <p>if a csv with 4 numbers is passed in then the first 3 numbers are used as the red, green and blue values, overwriting the config in the node and the 4th number is used as the pixel value see above </p>
 </script>
